# percevite

./: .cproject  .gitignore  .gitmodules  .project  README.md  setup.bash
scripts/: fix_opencv4tegra.sh  percevite.conf  rndis_host_setup.sh  setup_ros_pc.bash  share_connection.sh  share_connection_client.sh  undo_fix_opencv4tegra.sh
src/percevite/: CMakeLists.txt  package.xml
src/percevite/config/okvis/: slamdunk.yaml
src/percevite/config/svo2/calib/: slamdunk.yaml
src/percevite/config/svo2/param/: slamdunk.yaml
src/percevite/ext/udp/: udp.c  udp.h  udp_arch.c  udp_arch.h  udp_socket.c  udp_socket.h
src/percevite/launch/: okvis.launch  okvis_node.launch  percevite.launch  percevite_sitl.launch  svo2.launch
src/percevite/src/: disp2depth.cpp  percevite.cpp  percevite_messages.h  percevite_messages.hpp  percevite_pprzlink.cpp  percevite_pprzlink.hpp
